# multi-language-programming-playground

./: .cspell-dict.txt  .cspell.json  .tool-versions  README.md
.github/: dependabot.yml
.github/workflows/: pull-request-or-push-to-master.yaml
.trunk/: trunk.yaml
.trunk/configs/: .yamllint.yaml
go/: README.md  go.mod
python/: .gitignore  README.md  pyproject.toml
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
typescript/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: main.ts
